# kubernetes-rs

./: .rustfmt.toml  Cargo.toml  README.md
examples/: client-watch.rs
src/: lib.rs  serde_base64.rs
src/client/: mod.rs  resplit.rs
src/client/config/: api.rs  mod.rs
