cargo-features = ["edition"]

[package]
name = "keel"
version = "0.0.1"
authors = ["Angus Lees <gus@inodes.org>", "Aaron Friel <mayreply@aaronfriel.com>"]
description = "A Kubernetes client library for Rust"
repository = "https://github.com/aaronfriel/keel"
readme = "README.md"
keywords = ["kubernetes"]
categories = ["api-bindings"]
license = "Apache-2.0"
edition = "2018"

[features]
default = ["k8s-openapi/v1_11"]

[badges]
maintenance = {status = "actively-developed,experimental"}

[dependencies]
k8s-openapi = "^0.2.0"
dirs = "^1.0.3"
bytes = "^0.4.9"
url = "1.6"
http = "^0.1.0"
hyper = "^0.12.8"
hyper-tls = "0.3"
native-tls = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
serde_urlencoded = "0.5"
futures = "0.1.23"
tokio = "0.1.7"
tokio-core = "0.1.17"
failure = "0.1.1"
base64 = "0.9"
log = "0.4"
openssl = "0.10"

[dev-dependencies]
pretty_env_logger = "0.2"
serde_test = "1.0"

[[example]]
name = "client-watch"
default = ["k8s-openapi/v1_11"]
edition = "2018"
